Basic classes for remote storage